--- a/drillday.html
+++ b/drillday.html
@@ -39,29 +39,39 @@
 
     <!-- Page Content -->
     <div class="container">
-
-        <!-- Page Heading/Breadcrumbs -->
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Drill Day Schedule
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a>
-                    </li>
-                    <li class="active">Drill Day Schedule</li>
-                </ol>
+        <div class="box box-banner">
+            <!-- Page Heading/Breadcrumbs -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="intro-text text-center">
+                        Drill Day
+                    </h2>
+                </div>
             </div>
+            <!-- /.row -->
         </div>
-        <!-- /.row -->
 
-        <!-- Schedule -->
+        <div class="box">
+            <!-- Intro Content -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Go to this link to see the schedule:</p>
+                    <a href="https://docs.google.com/spreadsheets/d/17KTkEiwTsPPwAV5LjT7IRC-R65GcAB7tI_WjdHeDRIg/edit?usp=sharing">Schedule</a>
+                </div>
+            </div>
+            <!-- /.row -->
+        </div>
+
+
         <hr>
 
         <!-- Footer -->
         <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <p>Copyright &copy; Your Website 2014</p>
+                    </div>
                 </div>
             </div>
         </footer>
