--- a/practices.html
+++ b/practices.html
@@ -55,11 +55,12 @@
             <!-- Intro Content -->
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Go to this link to see the schedule:
-                        <a href="https://docs.google.com/spreadsheets/d/1qLPqHVVjnt1LcdfyYgoV9dBx-P9iZZa1cwaWpPBG9Yc/edit?usp=sharing">Schedule</a>
-                    </p>
+                    <iframe class="gdoc" src="https://docs.google.com/spreadsheets/d/1qLPqHVVjnt1LcdfyYgoV9dBx-P9iZZa1cwaWpPBG9Yc/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                    <!--<p>Go to this link to see the schedule:-->
+                        <!--<a href="https://docs.google.com/spreadsheets/d/1qLPqHVVjnt1LcdfyYgoV9dBx-P9iZZa1cwaWpPBG9Yc/edit?usp=sharing">Schedule</a>-->
+                    <!--</p>-->
 
-                    <p>If you are unable to make your scheduled time you must notify your opponent and Cameron as soon as possible.</p> 
+                    <!--<p>If you are unable to make your scheduled time you must notify your opponent and Cameron as soon as possible.</p> -->
                     <!--<p>Go to this link to see the Match Day results:
                         <a href="https://docs.google.com/spreadsheets/d/1L17BSS3JWt5PN-zBq2Ro5id-GbQ-nF-Qi7EVRV0bYxo/edit?usp=sharing">Match Day Results</a>
                     </p>-->
