--- a/calendar.html
+++ b/calendar.html
@@ -50,13 +50,18 @@
             </div>
             <!-- /.row -->
         </div>
+    </div>
+    <!-- /.container -->
 
 
+    <div class="container">
         <!-- temporary list of tournament dates until we figure out nicer way to display -->
         <div class="box">
+           <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe>
             <!-- Intro Content -->
             <div class="row">
                 <div class="col-lg-12">
+                    <br>
                     <ul>
                         <li>January 17: Guelph Fundraiser @ University of Guelph (Optional)</li>
                         <li>January 30 - February 1: OUA's @ Northfield Club</li>
@@ -72,22 +77,21 @@
             </div>
             <!-- /.row -->
         </div>
-
-        <hr>
-
-        <!-- Footer -->
-        <footer>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <p>Copyright &copy; Your Website 2014</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
-
     </div>
     <!-- /.container -->
+
+    <hr>
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Copyright &copy; Your Website 2014</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
     <!-- jQuery Version 1.11.0 -->
     <script src="js/jquery-1.11.0.js"></script>
