--- a/calendar.html
+++ b/calendar.html
@@ -63,14 +63,11 @@
                 <div class="col-lg-12">
                     <br>
                     <ul>
-                        <li>January 17: Guelph Fundraiser @ University of Guelph (Optional)</li>
-                        <li>January 30 - February 1: OUA's @ Northfield Club</li>
-                        <li>February 7-8: West Sectional #2 @ Western University</li>
                         <li>February 21 12-3pm: Team Concessions @ PAC</li>
-
-                        <li>February 28: Jesters Finals @ NSA (Team must qualify)</li>
-                        <li>March 6-8: Canadian University Champs @ Toronto (Optional)</li>
-                        <li>March 27: Athletic Banquet @ UW (Tentative date)</li> 
+			<li>February 21 6-8pm: Badminton & Squash hangout @ PAC</li>
+                        <li>March 6-8: Canadian University Champs @ Toronto. Sign up <a href "http://www.squash.ca/en/events/2015-black-knight-canadian-university-college-championships">here</a></li>
+                        <li>March 13-15: Team Ski Trip @ Algonquin. Message Hussein or Heather.</li>
+			<li>March 27: Athletic Banquet @ UW</li> 
                     </ul> 
                     <p>Alternately, here is a link to the google calendar: 
                         <a href="https://www.google.com/calendar/embed?src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&ctz=America%2FToronto">Google Calendar</a> 
