--- a/practices.html
+++ b/practices.html
@@ -55,14 +55,14 @@
             <!-- Intro Content -->
             <div class="row">
                 <div class="col-lg-12">
-                    <p>See schedule below. Or go to this 
-                        <a href="https://docs.google.com/spreadsheets/d/1qLPqHVVjnt1LcdfyYgoV9dBx-P9iZZa1cwaWpPBG9Yc/pubhtml?gid=160928171&single=true">Link</a>
-                    </p>
-                    <iframe class="gdoc" src="https://docs.google.com/spreadsheets/d/1qLPqHVVjnt1LcdfyYgoV9dBx-P9iZZa1cwaWpPBG9Yc/pubhtml?gid=160928171&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                    <!-- <p>See schedule below. Or go to this  -->
+                        <!-- <a href="https://docs.google.com/spreadsheets/d/1k1NKdIhNdvECe0V9DFy5oAKPPKBzHsNf1nD2L_CGV90/pubhtml?gid=0&single=true">Link</a> -->
+                    <!-- </p> -->
+                    <iframe class="gdoc" src="https://docs.google.com/spreadsheets/d/1k1NKdIhNdvECe0V9DFy5oAKPPKBzHsNf1nD2L_CGV90/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                      
-                    <p><br>Go to this link to see the Match Day results:
-                         <a href="https://docs.google.com/spreadsheets/d/1L17BSS3JWt5PN-zBq2Ro5id-GbQ-nF-Qi7EVRV0bYxo/edit?usp=sharing">Match Day Results</a>
-                    </p>
+                    <!-- <p><br>Go to this link to see the Match Day results: -->
+                         <!-- <a href="https://docs.google.com/spreadsheets/d/1L17BSS3JWt5PN-zBq2Ro5id-GbQ-nF-Qi7EVRV0bYxo/edit?usp=sharing">Match Day Results</a> -->
+                    <!-- </p> -->
                     </div>
             </div>
             <!-- /.row -->
