--- a/practices.html
+++ b/practices.html
@@ -55,9 +55,9 @@
             <!-- Intro Content -->
             <div class="row">
                 <div class="col-lg-12">
-                    <!-- <p>See schedule below. Or go to this  -->
-                        <!-- <a href="https://docs.google.com/spreadsheets/d/1k1NKdIhNdvECe0V9DFy5oAKPPKBzHsNf1nD2L_CGV90/pubhtml?gid=0&single=true">Link</a> -->
-                    <!-- </p> -->
+                    <p>See schedule below. Or go to this 
+                        <a href="https://docs.google.com/spreadsheets/d/1k1NKdIhNdvECe0V9DFy5oAKPPKBzHsNf1nD2L_CGV90/pubhtml?gid=0&single=true">Link</a>
+                    </p>
                     <iframe class="gdoc" src="https://docs.google.com/spreadsheets/d/1k1NKdIhNdvECe0V9DFy5oAKPPKBzHsNf1nD2L_CGV90/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                      
                     <!-- <p><br>Go to this link to see the Match Day results: -->
