--- a/practices.html
+++ b/practices.html
@@ -59,7 +59,7 @@
                         <a href="https://docs.google.com/spreadsheets/d/18JydlwtFBCIweYAN-JX6qNyuc907ojr-_vHVWqoKdxs/pubhtml?gid=360952732&single=true">Link</a>
                     </p>
                     <iframe class="gdoc" src="https://docs.google.com/spreadsheets/d/18JydlwtFBCIweYAN-JX6qNyuc907ojr-_vHVWqoKdxs/pubhtml?gid=360952732&amp;single=true&amp;widget=true&amp;headers=false"></iframe>                    
-                    <p><br>Go to this link to see the Match Day results:
+                    <p><br>Go to this link to see last terms Match Day results:
                          <a href="https://docs.google.com/spreadsheets/d/1L17BSS3JWt5PN-zBq2Ro5id-GbQ-nF-Qi7EVRV0bYxo/edit?usp=sharing">Match Day Results</a>
                     </p>
                     </div>
