--- a/calendar.html
+++ b/calendar.html
@@ -60,15 +60,10 @@
                 <div class="col-lg-12">
                     <br>
                     <ul>
-                        <li>Sept 25 - UW Fundraiser Tournament</li>
-                        <li>Sept 30/Oct 1 - Northfield Cup @ Waterloo</li>
-                        <li>TBD - Visit Juniors @ Windsor</li>
-                        <li>Oct 22/23 - West Sectional 1 @ Waterloo</li>
-                        <li>TBD - Jesters KW Event @ KW Racquet Club (Kitchener)</li>
-                        <li>Nov 19/20 - Crossovers @ Queens</li>
                         <li>Jan 14/15 - West Sectional 2 @ McMaster</li>
+                        <li>Jan 21st - Guelph Fundraiser @ Guelph
                         <li>Feb 3-5 - OUAs @ Waterloo </li>
-                        <li>Mar 11/12 - Jester Finals @ Toronto</li>
+                        <li>Mar 18/19 - Jester Finals @ Toronto</li>
                         <li>Mar 3-5 - Canadian University & College Championships @ Waterloo</li>
                     </ul> 
                     <!-- TODO: Hussein, uncomment this code and the iframe below once you update the google cal -->
