--- a/index.html
+++ b/index.html
@@ -9,73 +9,60 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>UW Varsity Squash - Contact Us</title>
+    <title>UW Varsity Squash</title>
+
+
+    <!-- jQuery Version 1.11.0 -->
+    <script src="js/jquery-1.11.0.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Javascript for common page loading -->
+    <script src="js/common.js"></script>
+    <!-- Javascript for index page functions -->
+    <script src="js/index.js"></script>
+    <!-- JSON containing news articles -->
+    <script src="js/json/news.json"></script>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <script src="js/common.js"></script>
 
 </head>
 
-<body onload="init();" >
+<body onload="init(); generateNews();">
 
     <!-- Navigation -->
-    <nav id="navBar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav id="navBar" class="navbar navbar-inverse navbar-fixed-top navBarBackground" role="navigation">
     <!-- Populated in Javascript -->
     </nav>
 
     <!-- Page Content -->
     <div class="container">
         <div class="box box-banner">
-            <!-- Page Heading/Breadcrumbs -->
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="intro-text text-center">
-                        Calendar
-                    </h2>
+                    <div>
+                        <img src="img/banner-comb.jpg" class="banner" alt="">
+                    </div>
+                    <h1 class="intro-text text-center">
+                        University of Waterloo's Varsity Squash 
+                    </h1>
                 </div>
             </div>
-            <!-- /.row -->
         </div>
     </div>
+        
     <!-- /.container -->
-
-
-    <div class="container">
-        <div class="box">
-            <div class="row">
-                <div class="col-lg-12">
-                    <br>
-                    <ul>
-                        <li>Mar 18/19 - Jester Finals @ RCYC </li>
-                    </ul> 
-                    <!-- TODO: Hussein, uncomment this code and the iframe below once you update the google cal -->
-                    <p>Alternately, here is a link to the google calendar: 
-                        <a href="https://www.google.com/calendar/embed?src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&ctz=America%2FToronto">Google Calendar</a> 
-                    </p>
-                </div>
-            </div>
-
-            <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-            </div>
+    <div id="newsContainer" class="container">
+        <!-- Javascript generates the news -->       
     </div>
-    <!-- /.container -->
 
-    <hr>
-    <!-- Footer -->
+
     <footer>
         <div class="container">
             <div class="row">
@@ -85,13 +72,6 @@
             </div>
         </div>
     </footer>
-
-
-    <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
