--- a/practices.html
+++ b/practices.html
@@ -58,7 +58,7 @@
                     <p>See schedule below. Or go to this 
                         <a href="https://docs.google.com/spreadsheets/d/18JydlwtFBCIweYAN-JX6qNyuc907ojr-_vHVWqoKdxs/pubhtml?gid=360952732&single=true">Link</a>
                     </p>
-                    <iframe class="gdoc" src="<iframe src="https://docs.google.com/spreadsheets/d/1prfXZr-mKaDmpGzw_BfVBOpRsk6pNDDb70e1SLAFAfg/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>                    
+                    <iframe class="gdoc" src="https://docs.google.com/spreadsheets/d/1prfXZr-mKaDmpGzw_BfVBOpRsk6pNDDb70e1SLAFAfg/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>                    
                     <p><br>Go to this link to see last terms Match Day results:
                          <a href="https://docs.google.com/spreadsheets/d/1L17BSS3JWt5PN-zBq2Ro5id-GbQ-nF-Qi7EVRV0bYxo/edit?usp=sharing">Match Day Results</a>
                     </p>
