--- a/practices.html
+++ b/practices.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>See schedule below. Or go to this 
-                        <a href="https://docs.google.com/spreadsheets/d/18JydlwtFBCIweYAN-JX6qNyuc907ojr-_vHVWqoKdxs/pubhtml?gid=360952732&single=true">Link</a>
+                        <a href="https://docs.google.com/spreadsheets/d/1prfXZr-mKaDmpGzw_BfVBOpRsk6pNDDb70e1SLAFAfg/pubhtml?gid=0&amp;single=true">Link</a>
                     </p>
                     <iframe class="gdoc" src="https://docs.google.com/spreadsheets/d/1prfXZr-mKaDmpGzw_BfVBOpRsk6pNDDb70e1SLAFAfg/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>                    
                     <p><br>Go to this link to see last terms Match Day results:
