--- a/calendar.html
+++ b/calendar.html
@@ -17,16 +17,12 @@
     <!-- Custom CSS -->
     <link href="css/main.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <script src="js/common.js"></script>
+    <!-- jQuery Version 1.11.0 -->
+    <script src="js/jquery-1.11.0.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
 </head>
 
@@ -61,9 +57,8 @@
                     <br>
                     <ul>
                         <li>Mar 18/19 - Jester Finals @ Toronto</li>
-                    <!-- NOTE: to add another date, copy and paste above and put below  
+                        <!-- NOTE: to add another date, copy and paste above and put below -->
                     </ul> 
-                    <!-- TODO: Hussein, uncomment this code and the iframe below once you update the google cal -->
                     <p>Alternately, here is a link to the google calendar: 
                         <a href="https://www.google.com/calendar/embed?src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&ctz=America%2FToronto">Google Calendar</a> 
                     </p>
@@ -88,11 +83,7 @@
     </footer>
 
 
-    <!-- jQuery Version 1.11.0 -->
-    <script src="js/jquery-1.11.0.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
