--- a/calendar.html
+++ b/calendar.html
@@ -65,12 +65,12 @@
                         <!-- NOTE: to add another date, copy and paste above and put below -->
                     </ul> 
                     <p>Alternately, here is a link to the google calendar: 
-                        <a href="https://www.google.com/calendar/embed?src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&ctz=America%2FToronto">Google Calendar</a> 
+                        <a href="https://calendar.google.com/calendar/embed?src=tori.grootjen%40gmail.com&ctz=America/Toronto">Google Calendar</a> 
                     </p>
                 </div>
             </div>
-
-            <iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?src=tori.grootjen%40gmail.com&ctz=America/Toronto" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <!--<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe> -->
             </div>
     </div>
     <!-- /.container -->
