--- a/calendar.html
+++ b/calendar.html
@@ -69,7 +69,7 @@
                     </p>
                 </div>
             </div>
-            <iframe src="https://calendar.google.com/calendar/embed?src=tori.grootjen%40gmail.com&ctz=America/Toronto" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=tori.grootjen%40gmail.com&ctz=America/Toronto" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe>
             <!--<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=6adv90gphmou70jmbbvqfbvvdc%40group.calendar.google.com&amp;color=%235F6B02&amp;ctz=America%2FToronto" style=" border-width:0 " width="100%" height="600" frameborder="0" scrolling="no"></iframe> -->
             </div>
     </div>
